update job descriptions

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                                         Joël </span> <span class="a-header c-brand__second-word t-title__second-word">
                                                         Luijmes </span> </span></h1>
                                             <h2 class="a-header c-brand__sub-title t-sub-title"> <span class="c-brand__sizer">
-                                                    Software Developer &amp; Student Data Science </span></h2>
+                                                    Software Ontwikkelaar &amp; Student Data Science </span></h2>
                                         </div>
                                     </div>
                                     <ul class="c-header__social-buttons c-social-buttons">
@@ -113,8 +113,7 @@
                 <div class="o-section__container">
                     <header class="o-section__header t-section__header">
                         <div class="o-content">
-                            <h2 class="o-section__heading">Experience</h2>
-                            <div class="o-content__body o-section__description">Yes. I&#39;ve been around.</div>
+                            <h2 class="o-section__heading">Ervaring</h2>
                         </div>
                     </header>
                     <div class="o-section__content t-section__content u-pb-0">
@@ -130,7 +129,9 @@
                                             <div class="c-work__location">Deventer, Nederland</div>
                                         </div>
                                         <div class="o-grid__col-md-7">
-                                            <p>Tool ontwikkeld wat xml bestanden vergelijkt.</p>
+                                            <p>Tool ontwikkeld wat XSD bestanden visualiseert en het vervolgens
+                                                mogelijk maakt om XML bestanden te valideren en inhoudelijk te
+                                                vergelijken.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -146,8 +147,9 @@
                                             <div class="c-work__location">Veenendaal, Nederland</div>
                                         </div>
                                         <div class="o-grid__col-md-7">
-                                            <p>Real-time kassadrukte voorspellen aan de hand van Machine Learning en
-                                                Internet of Things.</p>
+                                            <p>Onderzoek om real-time kassadrukte te voorspellen bij supermarkten met
+                                                Machine Learning. Dit door gebruik te maken van
+                                                historische data en live metingen.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -163,8 +165,8 @@
                                             <div class="c-work__location">Naxxar, Malta</div>
                                         </div>
                                         <div class="o-grid__col-md-7">
-                                            <p>Zelfstandig werkzaam met toevoegingen te ontwikkelen voor KYC Portal.
-                                                Een data verzamel platform voor klant validatie en onderzoek.</p>
+                                            <p>Webservice ontwikkeld om verschillende third-party sceening services te
+                                                integreren met de Know Your Customer (KYC) applicatie van Aqubix.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -174,15 +176,15 @@
                                 <div class="o-content">
                                     <div class="o-grid">
                                         <div class="o-grid__col-md-5">
-                                            <div class="c-work__timeframe">Nov. 2015 &ndash; Aug. 2017</div>
+                                            <div class="c-work__timeframe">Mei. 2017 &ndash; Aug. 2017</div>
                                             <h3 class="c-work__heading">Topicus Zorg</h3>
                                             <h4 class="c-work__title">Werkstudent</h4>
                                             <div class="c-work__location">Deventer, Nederland</div>
                                         </div>
                                         <div class="o-grid__col-md-7">
-                                            <p>Werkzaam bij de zorg divisie waar ik mee ontwikkel aan FinControl. Een
-                                                financieel platform waar declaraties worden verwerkt voor ziekenhuizen,
-                                                huisartsen, zorginstellingen en ambulancediensten.</p>
+                                            <p>Werkzaam in een team waar FinControl wordt ontwikkeld. Een online
+                                                financieel platform waarmee zorgverleners, zoals ziekenhuizen,
+                                                huisarten en ambulancediensten, kunnen declareren en factureren.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -206,6 +208,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="c-timeline__item">
+                                <div class="c-timeline__point t-timeline__point t-primary-bg"></div>
+                                <div class="o-content">
+                                    <div class="o-grid">
+                                        <div class="o-grid__col-md-5">
+                                            <div class="c-work__timeframe">Nov. 2015 &ndash; Jan. 2017</div>
+                                            <h3 class="c-work__heading">Topicus Zorg</h3>
+                                            <h4 class="c-work__title">Werkstudent</h4>
+                                            <div class="c-work__location">Deventer, Nederland</div>
+                                        </div>
+                                        <div class="o-grid__col-md-7">
+                                            <p>Zie bovenstaande omschrijving.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -218,8 +236,7 @@
                 <div class="o-section__container">
                     <header class="o-section__header t-section__header">
                         <div class="o-content">
-                            <h2 class="o-section__heading"> Education</h2>
-                            <div class="o-content__body o-section__description">Lazy isn&#39;t in my vocabulary.</div>
+                            <h2 class="o-section__heading">Opleiding</h2>
                         </div>
                     </header>
                     <div class="o-section__content t-section__content u-pt-0">
@@ -230,19 +247,13 @@
                                     <div class="c-timeline__point t-timeline__point t-primary-bg"></div>
                                     <div class="o-content">
                                         <div class="o-grid">
-                                            <div class="o-grid__col-md-5">
-                                                <div class="c-work__timeframe">Sep. 2018 &ndash; present</div>
+                                            <div class="o-grid__col-md-7">
+                                                <div class="c-work__timeframe">Sep. 2018 &ndash; Jun. 2021</div>
                                                 <h3 class="c-work__heading">Jheronimus Academy of Data Science</h3>
                                                 <h4 class="c-work__title">(Pre-)Master, Data Science and
                                                     Entrepreneurship</h4>
                                                 <div class="c-work__location">'s &amp; Hertogenbosch, Nederland</div>
                                             </div>
-                                            <div class="o-grid__col-md-7">
-                                                <p>Consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque
-                                                    aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id,
-                                                    mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra,
-                                                    tortor libero sodales leo, eget blandit nunc tortor eu nibh.</p>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -250,18 +261,12 @@
                                     <div class="c-timeline__point t-timeline__point t-primary-bg"></div>
                                     <div class="o-content">
                                         <div class="o-grid">
-                                            <div class="o-grid__col-md-5">
+                                            <div class="o-grid__col-md-7">
                                                 <div class="c-work__timeframe">Sep. 2014 &ndash; Jun. 2018</div>
                                                 <h3 class="c-work__heading">Saxion Hogenscholen</h3>
                                                 <h4 class="c-work__title">Bachelor, Technische Informatica</h4>
                                                 <div class="c-work__location">Enschede, Nederland</div>
                                             </div>
-                                            <div class="o-grid__col-md-7">
-                                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus
-                                                    hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque,
-                                                    aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula
-                                                    sollicitudin laoreet viverra, tortor libero.</p>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -269,17 +274,11 @@
                                     <div class="c-timeline__point t-timeline__point t-primary-bg"></div>
                                     <div class="o-content">
                                         <div class="o-grid">
-                                            <div class="o-grid__col-md-5">
+                                            <div class="o-grid__col-md-7">
                                                 <div class="c-work__timeframe">Sep. 2014 &ndash; Jun. 2015</div>
                                                 <h3 class="c-work__heading">Saxion Hogenscholen</h3>
                                                 <h4 class="c-work__title">Propedeuse, Elektrotechniek</h4>
                                                 <div class="c-work__location">Enschede, Nederland</div>
-                                            </div>
-                                            <div class="o-grid__col-md-7">
-                                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus
-                                                    hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque,
-                                                    aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula
-                                                    sollicitudin laoreet viverra, tortor libero.</p>
                                             </div>
                                         </div>
                                     </div>
