--- a/index.html
+++ b/index.html
@@ -289,15 +289,14 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="o-section t-section ">
+        <section class="o-section t-section ">
             <div class="o-section__header-bg t-section__header"></div>
             <div class="o-section__content-bg t-section__content"></div>
             <div class="o-container">
                 <div class="o-section__container">
                     <header class="o-section__header t-section__header">
                         <div class="o-content">
-                            <h2 class="o-section__heading"> Expertise</h2>
-                            <div class="o-content__body o-section__description">Batman would be jealous.</div>
+                            <h2 class="o-section__heading">Vaardigheden</h2>
                         </div>
                     </header>
                     <div class="o-section__content t-section__content ">
@@ -308,10 +307,11 @@
                                         <div class="c-number t-primary-color">01</div>
                                     </div>
                                     <div class="o-media__body o-content__body">
-                                        <h3>Advanced CSS</h3>
-                                        <p>Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer
-                                            adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna.
-                                            In nisi neque, aliquet vel, dapibus id.</p>
+                                        <h3>C# / .NET Core</h3>
+                                        <p>Programmeer al jaren in C#, van kleine tooltjes tot grote projecten. Tijdens
+                                            mijn periode bij Topicus hier veel gewerkt met ASP.NET. Gedurende
+                                            de stage bij Aqubix heb ik andere ontwikkelaars veel geleerd over C#
+                                            en .NET Core.</p>
                                     </div>
                                 </div>
                             </div>
@@ -321,10 +321,11 @@
                                         <div class="c-number t-primary-color">02</div>
                                     </div>
                                     <div class="o-media__body o-content__body">
-                                        <h3>Front-end Design</h3>
-                                        <p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel,
-                                            euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo
-                                            ullamcorper magna. Ut aliquam sollicitudin leo.</p>
+                                        <h3>TypeScript / JavaScript</h3>
+                                        <p>In eerste instantie gebruikte ik JavaScript voornamelijk bij Topicus. Later
+                                            ben ik ook meer web development gaan doen. View.js heb ik gebruikt tijdens
+                                            mijn afstudeerproject en tegenwoordig werk ik graag Angular, waar
+                                            TypeScript wordt gebruikt.</p>
                                     </div>
                                 </div>
                             </div>
@@ -334,10 +335,10 @@
                                         <div class="c-number t-primary-color">03</div>
                                     </div>
                                     <div class="o-media__body o-content__body">
-                                        <h3>Ruby on Rails</h3>
-                                        <p>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit
-                                            amet orci. Aenean dignissim pellentesque felis. Vivamus vestibulum nulla
-                                            cras ornare tristique elit nec ante.</p>
+                                        <h3>Embedded Development</h3>
+                                        <p>Tijdens mijn HBO opleiding heb ik veel geleerd over Embedded Development,
+                                            dit is de combinatie van software en elektrotechniek. Voornamelijk ben ik
+                                            geoefend in het gebruik van 8&dash;bit AVR Microcontrollers.</p>
                                     </div>
                                 </div>
                             </div>
@@ -347,10 +348,11 @@
                                         <div class="c-number t-primary-color">04</div>
                                     </div>
                                     <div class="o-media__body o-content__body">
-                                        <h3>Object-oriented PHP</h3>
-                                        <p>Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo.
-                                            Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed
-                                            arcu. Cras ante. Vivamus vestibulum nulla nec ante.</p>
+                                        <h3>Databases</h3>
+                                        <p>Bij Topicus werd gebruik gemaakt van een SQL database. Vanuit de applicatie
+                                            werd er gebruik gemaakt van NHiberante als ORM. In mijn eigen projecten
+                                            maak ik zelf gebruik van EntityFramework Core. Tijdens het afstuderen heb
+                                            ik gebruik gemaakt van MongoDB..</p>
                                     </div>
                                 </div>
                             </div>
@@ -360,10 +362,9 @@
                                         <div class="c-number t-primary-color">05</div>
                                     </div>
                                     <div class="o-media__body o-content__body">
-                                        <h3>WordPress</h3>
-                                        <p>Phasellus ultrices nulla quis nibh. Fusce lobortis lorem. Quisque a lectus.
-                                            Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam,
-                                            gravida non, sodales sit amet, nisi.</p>
+                                        <h3>Linux</h3>
+                                        <p>Als hobby vind ik het interessant om een Linux server (Debian) te beheren.
+                                            Verder host ik ook een webshop en mailserver voor iemand.</p>
                                     </div>
                                 </div>
                             </div>
@@ -373,10 +374,9 @@
                                         <div class="c-number t-primary-color">06</div>
                                     </div>
                                     <div class="o-media__body o-content__body">
-                                        <h3>JavaScript / jQuery</h3>
-                                        <p>Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer
-                                            adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna.
-                                            In nisi neque, aliquet vel, dapibus id.</p>
+                                        <h3>Docker</h3>
+                                        <p>De webserivce welke voor Aqubix is ontwikkeld, wordt opgeleverd als een
+                                            Docker container. Hiervoor is ook een CI/CD pipeline opgezet met GitLab.</p>
                                     </div>
                                 </div>
                             </div>
@@ -384,7 +384,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     </div>
 </body>
 
