--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         <div class="o-grid__col-sm-4">
                                             <div class="a-header o-content">
                                                 <div class="o-content__body">
-                                                    <h4>Regio</h4> <address>Brabant</address>
+                                                    <h4>Regio</h4> <address>Noord&dash;Brabant</address>
                                                 </div>
                                             </div>
                                         </div>
@@ -200,10 +200,9 @@
                                             <div class="c-work__location">Enschede, Nederland</div>
                                         </div>
                                         <div class="o-grid__col-md-7">
-                                            <p>Softwareframework ontwikkelen voor microcontrollers gebaseerd op
-                                                FreeRTOS met een demo applicatie. Voor de demo moet een print
-                                                ontwikkeld worden met hierop minimaal een Bluetooth module, (OLED)
-                                                display en verschillende sensoren.</p>
+                                            <p>Softwareframework ontwikkeld voor microcontrollers gebaseerd op
+                                                FreeRTOS. Daarnaast is er een printplaat ontworpen waar verschillende
+                                                peripherals worden aangestuurt door dit softwareframework.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -252,7 +251,7 @@
                                                 <h3 class="c-work__heading">Jheronimus Academy of Data Science</h3>
                                                 <h4 class="c-work__title">(Pre-)Master, Data Science and
                                                     Entrepreneurship</h4>
-                                                <div class="c-work__location">'s &amp; Hertogenbosch, Nederland</div>
+                                                <div class="c-work__location">'s&dash;Hertogenbosch, Nederland</div>
                                             </div>
                                         </div>
                                     </div>
@@ -324,7 +323,7 @@
                                         <h3>TypeScript / JavaScript</h3>
                                         <p>In eerste instantie gebruikte ik JavaScript voornamelijk bij Topicus. Later
                                             ben ik ook meer web development gaan doen. View.js heb ik gebruikt tijdens
-                                            mijn afstudeerproject en tegenwoordig werk ik graag Angular, waar
+                                            mijn afstudeerproject en tegenwoordig werk ik graag met Angular, waar
                                             TypeScript wordt gebruikt.</p>
                                     </div>
                                 </div>
@@ -336,7 +335,7 @@
                                     </div>
                                     <div class="o-media__body o-content__body">
                                         <h3>Embedded Development</h3>
-                                        <p>Tijdens mijn HBO opleiding heb ik veel geleerd over Embedded Development,
+                                        <p>Tijdens mijn hbo-opleiding heb ik veel geleerd over Embedded Development,
                                             dit is de combinatie van software en elektrotechniek. Voornamelijk ben ik
                                             geoefend in het gebruik van 8&dash;bit AVR Microcontrollers.</p>
                                     </div>
