add description to education

--- a/index.html
+++ b/index.html
@@ -246,25 +246,16 @@
                                     <div class="c-timeline__point t-timeline__point t-primary-bg"></div>
                                     <div class="o-content">
                                         <div class="o-grid">
-                                            <div class="o-grid__col-md-7">
+                                            <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">Sep. 2018 &ndash; Jun. 2021</div>
                                                 <h3 class="c-work__heading">Jheronimus Academy of Data Science</h3>
                                                 <h4 class="c-work__title">(Pre-)Master, Data Science and
                                                     Entrepreneurship</h4>
                                                 <div class="c-work__location">'s&dash;Hertogenbosch, Nederland</div>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="c-timeline__item">
-                                    <div class="c-timeline__point t-timeline__point t-primary-bg"></div>
-                                    <div class="o-content">
-                                        <div class="o-grid">
                                             <div class="o-grid__col-md-7">
-                                                <div class="c-work__timeframe">Sep. 2014 &ndash; Jun. 2018</div>
-                                                <h3 class="c-work__heading">Saxion Hogenscholen</h3>
-                                                <h4 class="c-work__title">Bachelor, Technische Informatica</h4>
-                                                <div class="c-work__location">Enschede, Nederland</div>
+                                                <p>Na het behalen van mijn bachelor ben ik in september 2018 begonnen
+                                                    aan de pre-master Data Science and Entrepreneurship.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -273,11 +264,35 @@
                                     <div class="c-timeline__point t-timeline__point t-primary-bg"></div>
                                     <div class="o-content">
                                         <div class="o-grid">
+                                            <div class="o-grid__col-md-5">
+                                                <div class="c-work__timeframe">Sep. 2014 &ndash; Jun. 2018</div>
+                                                <h3 class="c-work__heading">Saxion Hogenscholen</h3>
+                                                <h4 class="c-work__title">Bachelor, Technische Informatica</h4>
+                                                <div class="c-work__location">Enschede, Nederland</div>
+                                            </div>
                                             <div class="o-grid__col-md-7">
-                                                <div class="c-work__timeframe">Sep. 2014 &ndash; Jun. 2015</div>
+                                                <p>Gedurende een semester samen met drie andere studenten een eigen
+                                                    processor architectuur bedacht en fysiek ontwikkeld met zoveel
+                                                    mogelijk discrete componenten. Daarvoor is er ook een
+                                                    (micro-)assembler geschreven om voor de processor te programmeren.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="c-timeline__item">
+                                    <div class="c-timeline__point t-timeline__point t-primary-bg"></div>
+                                    <div class="o-content">
+                                        <div class="o-grid">
+                                            <div class="o-grid__col-md-5">
+                                                <div class="c-work__timeframe">Sep. 2014 &ndash; Jun. 2017</div>
                                                 <h3 class="c-work__heading">Saxion Hogenscholen</h3>
                                                 <h4 class="c-work__title">Propedeuse, Elektrotechniek</h4>
                                                 <div class="c-work__location">Enschede, Nederland</div>
+                                            </div>
+                                            <div class="o-grid__col-md-7">
+                                                <p>In het eerste jaar propedeuse voor beiden Technische Informatia en
+                                                    Elektrotechniek behaald. Daarna heb ik nog een aantal
+                                                    post-propedeuse vakken gevolgd van Elektrotechniek uit interesse.</p>
                                             </div>
                                         </div>
                                     </div>
